--- a/template/index.html
+++ b/template/index.html
@@ -2,191 +2,43 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title></title>
-
-    <style type="text/css">
-        body {  font-size:13px; margin:0px auto;background: rgb(230,230,230);}
-        #tabs { margin:0; padding:0; list-style:none; overflow:hidden; margin-top:10px;}
-        #tabs .item { position:relative;float:left; display:block;
-            padding:0px 15px;
-            line-height: 35px;
-            /*background-color:rgb(230,230,230);
-           border-top:1px solid rgb(172,172,172);
-           border-left:1px solid rgb(172,172,172);
-           border-right:1px solid rgb(172,172,172);*/
-            margin-left:5px;height:34px;
-            border-top-right-radius: 3px;
-            border-top-left-radius: 3px;
-        }
-        #tabs .item a.tab {
-            overflow: hidden;color:#999; text-decoration:none;width:90%;display:block;text-align: center; padding-top:2px;}
-        #tabs .item.current {
-            /*background-color:rgb(246,246,246);*/
-            height:35px;
-        }
-        #tabs .item.current a { color:#333; text-decoration:none; }
-        #tabs .item .remove { color:#333; text-decoration:none;position: absolute;right:10px;top:0px;font-size:18px;}
-
-
-        .tab-box {
-            height:43px;
-            position: absolute;
-            z-index: -1;
-            left:6px;
-            top:-5px;
-            width:100%;
-            background: rgb(230,230,230);
-            border-top-right-radius: 4px;
-            border-top-left-radius: 4px;
-            border:1px solid rgb(172,172,172);
-            border-bottom:none;
-            box-shadow: 0 0 2px  #fff inset;
-        }
-
-        #tabs .item.current {
-            z-index:40;
-            position:relative;
-        }
-        #tabs .item.current .tab-box{
-            height:45px;
-            background-color: rgb(246,246,246);
-            box-shadow: 0 0 2px 0 #fff inset;
-        }
-        #content { margin:0;overflow: hidden;padding-top:5px;background: rgb(246,246,246);}
-        #border{height:1px;background: rgb(172,172,172);position: absolute;top:44px;width:100%;z-index:-1;}
-        #nav {
-            position: absolute;
-            top:10px;
-            left:10px;
-        }
-        #nav a{
-            color:#fff;
-            width:30px;
-            height:30px;
-            display: inline-block;
-            margin-top:2px;
-            cursor: pointer;
-        }
-        #nav a:hover{
-            background-color:#aaa;
-        }
-        #nav-back {
-            background: url(./back.png) no-repeat center center;
-            background-size:80% 80%;
-        }
-        #nav-forward {
-            background: url(./forward.png) no-repeat center center;
-            background-size:80% 80%;
-        }
-        #nav-refresh {
-            background: url(./refresh.png) no-repeat center center;
-            background-size:70% 70%;
-        }
-        #main { width:100%;height:100%;}
-        #wrapper{height:100%;}
-        iframe{width:100%;height:100%;border:none;background-color:#fff;}
-        #header{ background-color:#F6F6F6; width:900px; margin:0px auto; margin-top:20px;
-            -moz-border-radius:10px;  -webkit-border-radius:10px; padding:30px; position:relative;}
-        #header h2 {font-size:16px; font-weight:normal; margin:0px; padding:0px;}
-
-    </style>
-
+    <meta charset="utf-8">
+    <title>sketch to html</title>
+    <link rel="stylesheet"
+          href="./assets/css/bootstrap.min.css">
     <script src="http://assets.souche.com/assets/js/lib/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-            $("#main").css('height',window.innerHeight - 10 +'px')
-            $("#content").css('height',window.innerHeight-55+'px')
-            $('#tabs a.tab').live('click', function() {
-                // Get the tab name
-                var contentname = $(this).attr("id") + "_content";
-
-                // hide all other tabs
-                $("#content iframe").hide();
-                $("#tabs .item").removeClass("current");
-
-                // show current tab
-                $("#" + contentname).show();
-                $(this).parent().addClass("current");
-            });
-
-            $('#tabs a.remove').live('click', function() {
-                // Get the tab name
-                var tabid = $(this).parent().find(".tab").attr("id");
-
-                // remove tab and related content
-                var contentname = tabid + "_content";
-                $("#" + contentname).remove();
-                $(this).parent().remove();
-
-                // if there is no current tab and if there are still tabs left, show the first one
-                if ($("#tabs .item.current").length == 0 && $("#tabs .item").length > 0) {
-
-                    // find the first tab
-                    var firsttab = $("#tabs .item:first-child");
-                    firsttab.addClass("current");
-
-                    // get its link name and show related content
-                    var firsttabid = $(firsttab).find("a.tab").attr("id");
-                    $("#" + firsttabid + "_content").show();
-                }
-                repaintTab()
-            });
-
-            $("#nav-back").on('click',function(){
-                window.history.go(-1)
-            })
-            $("#nav-forward").on('click',function(){
-                window.history.go(1)
-            })
-            $("#nav-refresh").on('click',function(){
-                window.location.reload();
-            })
-        });
-        var idIndex = 1;
-        function addTab(link,title) {
-            // hide other tabs
-            $("#tabs .item").removeClass("current");
-            $("#content iframe").hide();
-            // add new tab and related content
-            $("#tabs").append("<div class='current item'><div class=tab-box></div><a class='tab' id="+idIndex+" href='#'>" + title +
-              "</a><a href='#' class='remove'>x</a></div>");
-
-            $("#content").append("<iframe src="+link+" id='"+idIndex+"_content'></iframe>");
-
-            // set the newly added tab as current
-            $("#" + idIndex + "_content").show();
-            repaintTab()
-            idIndex++;
-        }
-        function repaintTab(){
-            var count = $("#tabs .item").length;
-            var width = (window.innerWidth - 20 )/count - 35;
-            $("#tabs .item").css("width",width + 'px')
-            $("#tabs .tab-box").css("-webkit-transform","perspective("+width+"px) rotateX(40deg)")
-        }
-
-
-    </script>
-
+    <script src="./assets/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div id="main">
-    <div id="wrapper">
-        <div id="border"></div>
-        <div id="nav">
-            <a id="nav-back"></a>
-            <a id="nav-forward"></a>
-            <a id="nav-refresh"></a>
-        </div>
-        <div id="tabs">
-            <!-- Tabs go here -->
-        </div>
-        <div id="content">
-            <!-- Tab content goes here -->
+    <div id="wrapper" class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                <div style="font-size:20px;line-height: 40px;margin-top:30px;">所有页面列表</div>
+                <ul class="list-group">
+                </ul></div>
+            <div class="col-md-10">
+                <iframe style="border:none;width:100%;" id="iframe"></iframe>
+            </div>
         </div>
     </div>
 </div>
 <script src="./index.js"></script>
+<script >
+    $('#iframe').css('height',window.innerHeight)
+    window.data.forEach(function(d){
+        $('.list-group').append('<li class="list-group-item" data-url="'+d.url+'">'+d.title+'</li>')
+    })
+
+    var active = function(ele){
+        $('.list-group li').removeClass('active')
+        $(ele).addClass('active')
+        $("#iframe").attr('src',$(ele).attr('data-url'))
+    }
+    active($('.list-group li:first-child'))
+    $('.list-group li').on('click',function(){
+        active($(this));
+    })
+</script>
 </body>
 </html>
